# music-advisor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENV_VARS.md  LICENSE  Makefile  NOTICE  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  TESTING.md  TROUBLESHOOTING.md  Taskfile.yml  automator.sh  automator_full.sh  ma_helper.toml  manifest_hashes.txt  project_map.json  pyproject.toml  requirements.txt  sitecustomize.py
engines/audio_engine/: .keep  README.md  pyproject.toml
engines/audio_engine/plugins/: README.md  interfaces.py  manifest.json
engines/audio_engine/tests/: test_import_smoke.py
engines/lyrics_engine/: README.md  pyproject.toml
engines/lyrics_engine/config/: lyric_neighbors_default.json
engines/lyrics_engine/tests/: test_import_smoke.py
engines/lyrics_engine/tools/: lyric_intel_engine.py  lyric_lci_norms.py  lyric_neighbors.py  lyric_stt_sidecar.py  lyric_wip_pipeline.py  lyric_wip_report.py
engines/recommendation_engine/: README.md  pyproject.toml
engines/recommendation_engine/recommendation_engine/: __init__.py  service.py
engines/recommendation_engine/tests/: test_import_smoke.py
hosts/advisor_host/: .ruff.toml  README.md  mypy.ini  pyproject.toml  server.py
hosts/advisor_host/adapter/: __init__.py  adapter.py  chat_backend_adapter.py  engine_contract.py  recommendation_adapter.py
hosts/advisor_host/auth/: __init__.py  auth.py  providers.py
hosts/advisor_host/cli/: diagnostics_cli.py  http_stub.py  ma_host.py  pack_macos_assets.py  session_cli.py
hosts/advisor_host/config/: __init__.py  default_norms_path.txt  host_profiles.yml  intents.yml
hosts/advisor_host/diagnostics/: __init__.py  diagnostics.py
hosts/advisor_host/docs/: host_inputs.md
hosts/advisor_host/host/: __init__.py  advisor.py  chat.py  compare.py  formatters.py  request_validation.py  schemas.py
hosts/advisor_host/intents/: intents.py
hosts/advisor_host/logging/: __init__.py  logger.py  metrics.py
hosts/advisor_host/schema/: __init__.py  reply_schema.json  schema.py
hosts/advisor_host/session/: __init__.py  session_store.py
hosts/advisor_host/tests/: conftest.py  golden_chat.json  golden_chat.sess.json  golden_chat_norms.json  golden_chat_norms.sess.json  test_adapter_schema.py  test_advisor.py  test_auth_provider.py  test_capabilities_intent.py  test_chat.py  test_chat_backend_adapter.py  test_cli_norms.py  test_diagnostics.py  test_e2e_playback.py  test_golden_flow.py  test_golden_transcripts.py  test_import_smoke.py  test_intents_and_validation.py  test_load_loop.py  test_norms_health.py  test_paging_and_limits.py  test_reply_schema_validator.py  test_schema.py  test_session_cli.py
hosts/advisor_host/tutorials/: __init__.py  tutorials.py
plugins/juce_probe/: CMakeLists.txt  README.md
plugins/juce_probe/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/juce_probe/scripts/: build_debug.sh  build_release.sh
plugins/juce_ui_demo/: CMakeLists.txt  CMakePresets.json  README.md
plugins/juce_ui_demo/Source/: FeatureCollector.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SidecarWriter.h
plugins/juce_ui_demo/docs/: dev_build_flow_macos.md  juce_ui_demo.md
plugins/juce_ui_demo/scripts/: install_plugins.sh  install_root.sh  package_release_signed.sh  refresh_au.sh
shared/: README.md  __init__.py  pyproject.toml
shared/calibration/: CALIBRATION.md  README.md  aee_band_thresholds_v1_1.json  aee_band_thresholds_v1_1_final.json  benchmark_diff_report.txt  benchmark_diff_report_after_features.txt  benchmark_truth.csv  benchmark_truth_v1_1.csv  calibration_audit.txt  hci_audio_v2_calibration_pop_us_2025Q4.json  hci_before_after.csv  hci_calibration_pop_us_2025Q4.json  hci_calibration_us_pop_v1.json  hci_policy_pop_us_audio_v2.json  hci_policy_v1.json  hci_v1_to_EchoTarget_v2_v1.json  hitlist_pop_us_2025_core_v1_1.csv  lci_calibration_us_pop_v1.json  lci_norms_us_pop_v1.json  loudness_norms_local_1985_1986_v1.json  loudness_norms_us_pop_v1.json  market_norms_us_pop.json  market_norms_us_pop_loudness_v1.json  ttc_profile_us_pop_v1.json
shared/calibration/aee_ml/: aee_ml_manifest.json  axis_dance.pkl  axis_energy.pkl
shared/calibration/aee_ml_outputs/: 1. Sabrina Carpenter - Espresso_20251114_061725.features.ml_axes.json  10. Lady Gaga, Bruno Mars - Die With A Smile_20251114_061002.features.ml_axes.json  11. Artemas - I Like The Way You Kiss Me_20251114_061015.features.ml_axes.json  12. Ariana Grande - We Can't Be Friends (Wait For Your Love)_20251114_061024.features.ml_axes.json  13. Sabrina Carpenter - Please Please Please_20251114_061037.features.ml_axes.json  14. Chappell Roan - Good Luck, Babe!_20251114_061048.features.ml_axes.json  15. Tate McRae - Greedy_20251114_061102.features.ml_axes.json  16. Tommy Richman - MILLION DOLLAR BABY_20251114_061111.features.ml_axes.json  17. Jimin - Who_20251114_061121.features.ml_axes.json  (+431 more)
shared/config/: __init__.py  audio.py  constants.py  neighbors.py  paths.py  pipeline.py  profiles.py  scripts.py
shared/content_addressed_broker/: README.md  __init__.py  broker.py  cli.py  pyproject.toml  queue.py  utils.py
shared/content_addressed_broker_swift/: Package.swift  README.md
shared/core/: __init__.py  profiles.py
shared/design_system/: MAStyle_styleguide.md  Package.swift  README.md
shared/ma_utils/: __init__.py  cache_utils.py  echo_services.py  hci_echo_probe_from_spine_v1.py  key_norms_sidecar.py  logger_factory.py  names.py  philosophy_services.py  schema_utils.py
shared/security/: __init__.py  config.py  db.py  files.py  paths.py  subprocess.py
shared/taskconductor/: Package.swift  README.md
shared/utils/: README.md  __init__.py  paths.py
src/ma_config/: LICENSE  README.md  __init__.py  audio.py  constants.py  neighbors.py  paths.py  pipeline.py  profiles.py  pyproject.toml  scripts.py
tools/xcode_bridge/: CMakeLists.txt  DerivedDataOverride.xcconfig  README.md  build_debug.sh  clean_builds.sh
xcode_bridge_demo/: CMakeLists.txt  README.md  build_debug.sh
(+1478 files in other folders)
