[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-advisor-shared"
version = "0.1.0"
description = "Shared utilities for Music Advisor mono-repo."
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
packages = [
  "shared",
  "shared.calibration",
  "shared.config",
  "shared.core",
  "shared.security",
  "shared.utils",
]
