[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-advisor-config"
version = "0.1.0"
description = "Config helpers for Music Advisor mono-repo."
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
packages = ["ma_config"]
